FPVTL-2044 - Fix NullPointerException when Applicants/Respondents are removed and added.